Fix IDE-flagged errors.